--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-facebook-pixel": "^1.0.4",
     "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
